// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`replace-content can replace JSX 1`] = `
[
  "Hello ",
  "Jane",
  " ",
  "Doe",
]
`;

exports[`replace-content can replace JSX 2`] = `
[
  "Hello ",
  "Jane",
  " ",
  "Doe",
]
`;

exports[`replace-content can replace JSX 3`] = `"translation data not found for tag: 'firstName'"`;

exports[`replace-content can replace JSX 4`] = `"translation data not found for tag: 'strong'"`;

exports[`replace-content can replace JSX 5`] = `
[
  "Hello ",
  <strong>
    Jane
  </strong>,
  " ",
  "Doe",
]
`;

exports[`replace-content can replace JSX 6`] = `
[
  <strong>
    Hello
  </strong>,
  " World ",
  <Link>
    Link here
  </Link>,
]
`;

exports[`replace-content can replace a string 1`] = `"Hello John Doe"`;

exports[`replace-content can replace a string 2`] = `"Hello John Doe"`;

exports[`replace-content can replace a string 3`] = `"translation data not found for tag: 'lastName'"`;

exports[`replace-content can replace a string with a custom pattern 1`] = `"Hello John Doe"`;

exports[`replace-content can replace a string with a custom pattern 2`] = `"Hello John Doe"`;
